--- a/Desafios/Modulo 2/d010/estilo/style.css
+++ b/Desafios/Modulo 2/d010/estilo/style.css
@@ -2,6 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+/**/
 @font-face {
     font-family: 'Android';
     src: url('../fontes/idroid.otf') format('opentype');
