--- a/exercicios/solo/style.css
+++ b/exercicios/solo/style.css
@@ -1,5 +1,53 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-    body{
-        background-color: lightslategray;
-    }
+/* config para a raiz da arvore */
+:root{
+    --cor0: #F594C2;
+    --cor1: #D408C0;
+    --cor2: #C002EB;
+    --cor3: #7E08D4;
+    --cor4: #5B0AF7;
+
+    --fonte-destaque: 'bebas Neue', cursive;
+    --fonte-padrão: Arial, Verdana. Helvetica, sans-serif;
+}
+
+/* config global*/
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+body{
+    background-color: lightslategray; 
+}
+
+header{
+    background-image: linear-gradient(to bottom,var(--cor3), var(--cor2));
+    min-height: 100px;
+    text-align: center;
+    padding-top: 20px;
+}
+
+header > h1{
+    color: white;
+    font-family: var(--fonte-destaque);
+    font-weight: normal;
+    font-size: 3em;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.507);
+}
+
+header > p {
+    color: white;
+    font-family: var(--fonte-destaque);
+    font-size: 1.2em;
+    max-width: 600px;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin: auto;
+    margin-bottom: 30px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.507);
+}
+
