--- a/Desafios/Modulo 2/d011/style.css
+++ b/Desafios/Modulo 2/d011/style.css
@@ -3,9 +3,10 @@
 #fundo{
     background-image: url(imagens/espaco.jpg);
     background-size: 100% 100%;
-    height: 98vh;
+    height: 100vh;
     position: relative;
-    margin: -10px;
+    margin: -20px;
+    padding: -10px;
     
 }
     
