--- a/Desafios/Modulo 2/d012/estilo/style.css
+++ b/Desafios/Modulo 2/d012/estilo/style.css
@@ -1,13 +1,23 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Passions+Conflict&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
     
     *{
         margin: 0px;
         padding: 0px;
+        font-size: 1em;
     }
 
     html , body{
         min-height: 100vh;
         background-color: darkgrey;
+        font-family: var(--fonte1);
     }
 
     header{
@@ -19,6 +29,8 @@
     header > h1{
         padding-top: 50px;
         font-variant: small-caps;
+        font-family: var(--fonte2);
+        font-size: 10vw;
     }
 
     header > p {
@@ -35,12 +47,14 @@
         text-decoration: underline;
     }
 
-    /*Efeito paralax*/
+   
     section{
         padding-top: 10vh;
         padding-bottom: 10vh;
         line-height: 2em;
         padding-left: 30px;
+        font-family: var(--fonte3);
+        font-size: 3vw;
     }
 
     section.normal{
@@ -55,7 +69,8 @@
 
     section.imagem > p{
         background-color: rgba(0, 0, 0, 0.288);
-        width: 400px;
+        display: inline-block;
+        padding: 5px;
     }
 
     footer{
